Switch to command mappings instead of hardcoded command strings